# Rewind

./: .eslintrc-auto-import.json  .gitignore  components.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
backend/: README.md  main.py  pyproject.toml
docs/: development.md
src-tauri/: Cargo.toml  pyproject.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/python/tauri_app/: __init__.py
src-tauri/python/tauri_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/components/custom/system/theme/: theme-toggle.tsx
src/components/layout/: DragRegion.tsx  Sidebar.tsx
src/components/shadcn-ui/: calendar.tsx  sidebar.tsx
src/layouts/: Auth.tsx  MainLayout.tsx
src/lib/services/: request.ts
src/lib/services/chat/: single.ts
src/lib/services/message/: index.ts
src/lib/services/user/: auth.ts  block.ts  contact.ts  conversation.ts  info.ts
src/lib/stores/: user.ts
src/lib/types/: clickMenu.ts  conversations.ts  messages.ts  profile.ts  relations.ts
src/routes/: Index.tsx
src/views/: App.tsx
src/views/Auth/: Login.tsx
