[project]
name = "agent_backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black==23.11.0",
    "fastapi==0.104.1",
    "httpx==0.25.2",
    "isort==5.12.0",
    "loguru==0.7.2",
    "mss==9.0.1",
    "mypy==1.7.1",
    "opencv-python>=4.12.0.88",
    "pillow>=12.0.0",
    "pynput==1.7.6",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "pyyaml==6.0.1",
    "toml==0.10.2",
    "typer>=0.12.0",
    "uvicorn[standard]==0.24.0",
]
